fixing navbar padding on mobile

--- a/style.css
+++ b/style.css
@@ -25,12 +25,14 @@ p,span{
     align-items: center;
     padding: 0 70px;
     position: relative;
+    background-color: #fff;
 }
 .nav-list{
     margin-left: auto;
     display: flex;
     list-style: none;
 }
+
 .navbar img{
     width: 120px;
 }
@@ -64,6 +66,9 @@ p,span{
     #wrapper{
         overflow-x: hidden;
     }
+    .navbar{
+        padding: 0 40px;
+    }
     .nav-list{
         flex-direction: column;
         position: absolute;
@@ -75,7 +80,7 @@ p,span{
         align-items: center;
         justify-content: space-evenly;
         transform: translateX(110%);
-        transition: .8s ease-out;
+        transition: .5s ease-out;
         box-shadow: -5px 10px 10px rgba(0, 0, 0, .3)
     }
     .nav-list a{
